[tool.poetry]
name = "Bot_Parser_Database"
version = "0.1.0"
description = ""
authors = ["Pavlov Oleh <op663246@gmail.com>"]
readme = "README.md"
packages = [{include = "Bot_Parser_Database"}]

[tool.poetry.dependencies]
python = "^3.11.1"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
